test/compilable/imports/lib19724b.d
module lib19724b;

int second(int x) { return 0; }
