test/fail_compilation/fail291.d
auto a() { return 0; }
typeof(a) X;
